[package]
name = "monero-payment"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/caukub/monero-payment"
repository = "https://github.com/caukub/monero-payment"
description = "High level API for processing Monero payments"
include = [
    "**/*.rs",
]
